# CampusNumerique_llm

./: .env.example  .gitignore  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
config/: README.md  __init__.py  loader.py  logging_config.py
core/: README.md  __init__.py
core/n8n/files/assets/partie_1/2_DataManipulation/daily_series_flat/: digital_currency_BTC.csv  digital_currency_BTC_v.csv  stock_AGG.csv
core/n8n/files/assets/partie_1/2_DataManipulation/daily_series_raw/: digital_currency_BTC.json  stock_SPY.json  stock_VIX.json
core/n8n/files/exercices/daily_series_flat/: digital_currency_BTC.csv  stock_AGG.csv  stock_GLD.csv  stock_SPY.csv
core/n8n/files/exercices/daily_series_raw/: stock_AGG.json  stock_GLD.json
core/n8n/files/workflows/: 03BKZejCX7oFmcBd.json  1ByZos6QPm1IX1XW.json  1EQkVuhJCSBro46t.json  2EBt4tq9VISAU36a.json  3cU5uJPHDakh8FbO.json  51UsCsZWwGYZEeB9.json  5LZiGwQhMFA5wo4A.json  5UydMayGZsAlLuSk.json  7f0BbRGJIMN3FmvB.json  IBPE5HzAVNUHa555.json  IeOZkKPmQyDHqk67.json  Kgp45iTcTkcqOFMR.json  LAHaVJ69HgfHXMWk.json  PnMFoHmzXOAt3nSH.json  RUCEUXAay0eRXeBd.json  TeduUfcCiv3Zd4Yi.json  WoG3mUdC91cXDtfc.json  XAVfKfyTQ2nzlml7.json  Y0ZrwwPRcBHe3zXn.json  YHDnyt9Gd2SyCK7t.json  cl7DenhrxZNTbuJK.json  csyKTIuZLHBhphwc.json  d2qFh1XnYlvaduxh.json  f2X71ZEH5EN5RTMa.json  fCIQR6wyhXt9mnb8.json  flN6dDgjQHyORqXR.json  fsOaIuiLrhfKrIn6.json  mKeTqVLGiQD3xhW8.json  n0rkPTGKHEhSwuE9.json  nh0gILebLJIzAdWw.json  p9DNHt2BLRbiQP88.json  q50qROVlXs2hEUh1.json  qVBv7Xeobu8yTPoa.json  rt2a1FyC8N4XuYML.json  sKap84uRZ6iI3HED.json
core/n8n/postgres/init/: 01-init.sql
core/your_package_example/: run.py
